make migrations each build derivatives vs shuffles discrimination fixed Added context for footer data in all views filter results to non-shuffled

--- a/gedata/templates/gedata/results.html
+++ b/gedata/templates/gedata/results.html
@@ -1,6 +1,9 @@
 {% extends 'gedata/base.html' %}
 
 {% block content %}
+{% load humanize %}
+
+<p>{{ latest_result_summary.num_actuals|intcomma }} real results ({{ latest_result_summary.num_shuffles|intcomma }} agno + {{ latest_result_summary.num_distshuffles|intcomma }} dist + {{ latest_result_summary.num_edgeshuffles|intcomma }} edge shuffles).</p>
 
 {% if pushresult_list %}
     <ul>
