allow chunking and ordering

--- a/gedata/templates/gedata/results.html
+++ b/gedata/templates/gedata/results.html
@@ -8,7 +8,10 @@
 {% if pushresult_list %}
     <ul>
     {% for result in pushresult_list %}
-        <li><a href="{% url 'gedata:result' result.pk %}">{{ result }}</a></li>
+        <h3>{{ result.subject }}</h3>
+        {% for subject in result.subject__set.all|dictsort:"hemisphere" %}
+            <li><a href="{% url 'gedata:result' result.pk %}">{{ result }}</a></li>
+        {% endfor %}
     {% endfor %}
     </ul>
 {% else %}
