--- a/gedata/templates/gedata/index.html
+++ b/gedata/templates/gedata/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<p>As of {{ latest_result_summary.summary_date }}, {{ n_results|intcomma }} results are available locally.</p>
+<p>As of {{ latest_result_summary.summary_date }}, {{ latest_result_summary.num_results|intcomma }} results are available locally.</p>
 <ul>
     <li>{{ latest_result_summary.num_actuals|intcomma }} results from actual data</li>
     <li>{{ latest_result_summary.num_shuffles|intcomma }} results from agnostically shuffled data</li>
