--- a/gedata/templates/gedata/index.html
+++ b/gedata/templates/gedata/index.html
@@ -2,6 +2,8 @@
 
 {% load humanize %}
 
+{% block title %}Gene Expression and Functional Connectivity{% endblock %}
+
 {% block content %}
 
 <p>As of {{ latest_result_summary.summary_date }}, {{ latest_result_summary.num_results|intcomma }} results are available locally.</p>
