--- a/gedata/templates/gedata/result.html
+++ b/gedata/templates/gedata/result.html
@@ -5,22 +5,25 @@
 {% block content %}
 {% load humanize %}
 
-<h2>{{ pushresult.subject }}-{{ pushresult.hemisphere }}-{{ pushresult.cortex }}-{{ pushresult.probes }} vs {{ pushresult.comparator }}</h2>
+<h2>{{ pushresult.sub }}-{{ pushresult.hem }}-{{ pushresult.samp }}-{{ pushresult.prob }} vs {{ pushresult.comp }}</h2>
 
 <p>Ran from {{ pushresult.start_date }} to {{ pushresult.end_date }} ({{ pushresult.duration|intcomma }} seconds) on {{ pushresult.host }} as:<br />
 <code>{{ pushresult.command }}</code></p>
 
 <table>
-    <tr><td>subject      : </td><td>{{ pushresult.subject }}</td></tr>
-    <tr><td>hemisphere   : </td><td>{{ pushresult.hemisphere }}</td></tr>
-    <tr><td>cortex       : </td><td>{{ pushresult.cortex }}</td></tr>
-    <tr><td>probes       : </td><td>{{ pushresult.probes }}</td></tr>
-    <tr><td>target       : </td><td>{{ pushresult.target }}</td></tr>
-    <tr><td>algorithm    : </td><td>{{ pushresult.algorithm }}</td></tr>
-    <tr><td>normalization: </td><td>{{ pushresult.normalization }}</td></tr>
-    <tr><td>comparator   : </td><td>{{ pushresult.comparator }}</td></tr>
+    <tr><td>subject      : </td><td>{{ pushresult.sub }}</td></tr>
+    <tr><td>hemisphere   : </td><td>{{ pushresult.hem }}</td></tr>
+    <tr><td>sample       : </td><td>{{ pushresult.samp }}</td></tr>
+    <tr><td>probes       : </td><td>{{ pushresult.prob }}</td></tr>
+    <tr><td>parcel by    : </td><td>{{ pushresult.parby }}</td></tr>
+    <tr><td>split by     : </td><td>{{ pushresult.splby }}</td></tr>
+    <tr><td>batch        : </td><td>{{ pushresult.batch }}</td></tr>
+    <tr><td>target       : </td><td>{{ pushresult.tgt }}</td></tr>
+    <tr><td>algorithm    : </td><td>{{ pushresult.algo }}</td></tr>
+    <tr><td>normalization: </td><td>{{ pushresult.norm }}</td></tr>
+    <tr><td>comparator   : </td><td>{{ pushresult.comp }}</td></tr>
     <tr><td>mask         : </td><td>{{ pushresult.mask }}</td></tr>
-    <tr><td>adjustment   : </td><td>{{ pushresult.adjustment }}</td></tr>
+    <tr><td>adjustment   : </td><td>{{ pushresult.adj }}</td></tr>
     <tr><td>shuffle      : </td><td>{{ pushresult.shuffle }} (seed {{ pushresult.seed }})</td></tr>
 </table>
 
