--- a/gedata/templates/gedata/index.html
+++ b/gedata/templates/gedata/index.html
@@ -56,11 +56,12 @@
         <ul>NKI INDI:
             <li>parby-glasser_splby glasser ~ <b>indiglasserconnsim</b>  mask-none (2 + 1,536: July 28 - Aug 1)</li>
             <li>parby-glasser_splby-wellid ~ indiglasserconnsim  mask-none (2 + 1,536: July 28 - Aug 1)</li>
-            <li>parby-wellid_splby glasser ~ indiconnsim  mask-none  (2 + 1,536: Aug 1 - present) ...running...</li>
-            <li>parby-wellid_splby wellid ~ indiconnsim  mask-none  (2 + 1,536: Aug 1 - present)...running...</li>
+            <li>parby-wellid_splby glasser ~ indiconnsim  mask-none  (2 + 1,536: Aug 1 - Aug 25)</li>
+            <li>parby-wellid_splby wellid ~ indiconnsim  mask-none  (2 + 1,536: Aug 1 - Aug 25)</li>
+            <li>parby-glasser_splby-* ~ indiglasserconnsim mask-[16,32,64] (...presently running...)</li>
         </ul>
     <p> The primary result is in bold, based on an earlier conversations. Each partially bolded collection has only one variable altered from the primary.
-        We can use each of these to see how chaging that particular variable would have changed our primary results.
+        We can use each of these to see how changing that particular variable would have changed our primary results.
     </p>
     <ul style="color: gray;">
         <li>A validation batch was run July 28th to ensure new code with new naming conventions produced identical results to older code.
