--- a/gedata/templates/gedata/index.html
+++ b/gedata/templates/gedata/index.html
@@ -55,10 +55,15 @@
         </ul>
         <ul>NKI INDI:
             <li>parby-glasser_splby glasser ~ <b>indiglasserconnsim</b>  mask-none (2 + 1,536: July 28 - Aug 1)</li>
+            <li>parby-glasser_splby glasser ~ indiglasserconnsim  mask-16 (32 + 1,536: Aug 25-31)</li>
+            <li>parby-glasser_splby glasser ~ indiglasserconnsim  mask-32 (32 + 1,536: Aug 25-31)</li>
+            <li>parby-glasser_splby glasser ~ indiglasserconnsim  mask-64 (32 + 1,536: Aug 25-31)</li>
             <li>parby-glasser_splby-wellid ~ indiglasserconnsim  mask-none (2 + 1,536: July 28 - Aug 1)</li>
+            <li>parby-glasser_splby wellid ~ indiglasserconnsim  mask-16 (32 + 1,536: Aug 25-31)</li>
+            <li>parby-glasser_splby wellid ~ indiglasserconnsim  mask-32 (32 + 1,536: Aug 25-31)</li>
+            <li>parby-glasser_splby wellid ~ indiglasserconnsim  mask-64 (32 + 1,536: Aug 25-31)</li>
             <li>parby-wellid_splby glasser ~ indiconnsim  mask-none  (2 + 1,536: Aug 1 - Aug 25)</li>
             <li>parby-wellid_splby wellid ~ indiconnsim  mask-none  (2 + 1,536: Aug 1 - Aug 25)</li>
-            <li>parby-glasser_splby-* ~ indiglasserconnsim mask-[16,32,64] (...presently running...)</li>
         </ul>
     <p> The primary result is in bold, based on an earlier conversations. Each partially bolded collection has only one variable altered from the primary.
         We can use each of these to see how changing that particular variable would have changed our primary results.
